--- a/ToDoList.Application/ToDoList.Application.csproj
+++ b/ToDoList.Application/ToDoList.Application.csproj
@@ -20,7 +20,7 @@
 
   <ItemGroup>
     <Folder Include="Features\Commands\" />
-    <Folder Include="Features\Queries\" />
+    <Folder Include="Features\Queries\Entities\GetTasksList\" />
   </ItemGroup>
 
 </Project>
