added dbContext, seed and configuration

--- a/ToDoList.API/appsettings.json
+++ b/ToDoList.API/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "ConnectionStrings": {
+    "Production": "Server=(localdb)\\MSSQLLocalDB;Database=ToDo;Trusted_Connection=True;",
+    "IntegrationTests": "Server=(localdb)\\MSSQLLocalDB;Database=ToDoIntegrationTests;Trusted_Connection=True;"
+  },
+
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
